# devind-django-helpers

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  readme.md  whitelist.txt
.github/workflows/: release.yml
devind_helpers/: __init__.py  decorators.py  exceptions.py  optimized.py  orm_utils.py  redis_client.py  relations.py  request.py  unpack_zip.py  utils.py
devind_helpers/files/: __init__.py  cleaner.py  sign_synchronizer.py  utils.py
devind_helpers/generators/: __init__.py  document_generator.py
devind_helpers/import_from_file/: __init__.py  base_reader.py  csv_reader.py  excel_reader.py  exceptions.py  import_from_file.py  json_reader.py  ratio.py
devind_helpers/mutation_factories/: __init__.py  delete_mutation.py
devind_helpers/permissions/: __init__.py  base_permissions.py  user_permissions.py
devind_helpers/schema/: __init__.py  connections.py  mutations.py  types.py
devind_helpers/validator/: __init__.py  validators.py
tests/: __init__.py  settings.py
tests/schema/: __init__.py  mutations.py  types.py
