[tool.poetry]
name = "devind_helpers"
version = "0.7.0"
description = "Devind helpers."
authors = ["Victor <lyferov@yandex.ru>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/devind-team/devind-django-helpers"
repository = "https://github.com/devind-team/devind-django-helpers"
keywords = ["django", "graphene", "helpers"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django"
]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.1.4"
Django = ">=3.2.12,<5.0.0"
graphene-django = "^2.15.0"
inflection = "^0.5.1"
graphene-django-optimizer = "^0.8.0"
flatten-dict = "^0.4.2"
openpyxl = "^3.0.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-simplify = "^0.19.3"
flake8-spellcheck = "^0.28.0"
pep8-naming = "^0.13.3"
flake8-use-fstring = "^1.4"
flake8-annotations = "^3.0.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "devind_helpers/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
